--- a/css/main.css
+++ b/css/main.css
@@ -1625,22 +1625,22 @@ header .logo a {
 	padding-bottom: 12rem;
 }
 
-#resume .resume-header {
+#about .resume-header {
 	text-align: center;
 }
-#resume .resume-header h2 {
-	color: #FF0077;
+#about .resume-header h2 {
+	color: #4169E1;
 }
 
-#resume .resume-timeline {
+#about .resume-timeline {
 	max-width: 980px;
 }
-#resume .timeline-wrap {
+#about .timeline-wrap {
 	position: relative;
 	margin-top: 1.5rem;
 	margin-bottom: 6rem;
 }
-#resume .timeline-wrap::before {
+#about .timeline-wrap::before {
 	content: "";
 	display: block;
 	width: 1px;
@@ -1650,11 +1650,11 @@ header .logo a {
 	left: 35%;
 	top: 0;
 }
-#resume .timeline-block {
+#about .timeline-block {
 	position: relative;
 	padding-top: 1.5rem;
 }
-#resume .timeline-ico {
+#about .timeline-ico {
 	height: 4.8rem;
 	width: 4.8rem;
 	line-height: 4.8rem;
@@ -1667,35 +1667,35 @@ header .logo a {
 	top: .9rem;
 	margin-left: -2.4rem;
 }
-#resume .timeline-ico i {
+#about .timeline-ico i {
 	position: relative;
 	left: .05rem;
 	top: .2rem;
 }
 
-#resume .timeline-header {
+#about .timeline-header {
 	float: left;
 	width: 35%;
 	padding-right: 90px;
 	text-align: right;
 }
-#resume .timeline-header h3 {
+#about .timeline-header h3 {
 	margin-bottom: 0;
 }
-#resume .timeline-header p {
+#about .timeline-header p {
 	font-family: "poppins-regular", sans-serif;
 	font-size: 1.6rem;
 	color: #888888;
 }
-#resume .timeline-content {
+#about .timeline-content {
 	margin-left: 35%;
 	padding-left: 60px;
 }
-#resume .timeline-content h4 {
+#about .timeline-content h4 {
 	position: relative;
 	padding-bottom: 1.8rem;
 }
-#resume .timeline-content h4::after {
+#about .timeline-content h4::after {
 	content: "";
 	display: block;
 	height: 3px;
@@ -1712,64 +1712,64 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 @media only screen and (max-width:1024px) {
-	#resume .timeline-header {
+	#about .timeline-header {
 		padding-right: 50px;
 	}
-	#resume .timeline-header h3 {
+	#about .timeline-header h3 {
 		font-size: 1.8rem;
 	}
-	#resume .timeline-header p {
+	#about .timeline-header p {
 		font-size: 1.4rem;
 	}
-	#resume .timeline-content {
+	#about .timeline-content {
 		padding-left: 50px;
 	}
 }
 @media only screen and (max-width:768px) {
-	#resume .timeline-wrap::before {
+	#about .timeline-wrap::before {
 		left: 2.4rem;
 	}
-	#resume .timeline-ico {
+	#about .timeline-ico {
 		left: 2.4rem;
 	}
-	#resume .timeline-header {
+	#about .timeline-header {
 		float: none;
 		width: auto;
 		padding-right: 15px;
 		text-align: left;
 	}
-	#resume .timeline-header h3 {
+	#about .timeline-header h3 {
 		font-size: 2rem;
 	}
-	#resume .timeline-header p {
+	#about .timeline-header p {
 		font-size: 1.5rem;
 		margin-bottom: 1.5rem;
 	}
-	#resume .timeline-content {
+	#about .timeline-content {
 		margin: 0;
 	}
-	#resume .timeline-content h4 {
+	#about .timeline-content h4 {
 		padding-bottom: 0;
 		padding-top: 2.1rem;
 		margin-bottom: .6rem;
 		font-size: 1.7rem;
 	}
-	#resume .timeline-content h4::after {
+	#about .timeline-content h4::after {
 		bottom: auto;
 		top: 0;
 	}
-	#resume .timeline-header, #resume .timeline-content {
+	#about .timeline-header, #about .timeline-content {
 		padding-left: 7rem;
 	}
 }
 @media only screen and (max-width:480px) {
-	#resume .resume-header h2 {
+	#about .resume-header h2 {
 		font-size: 2.2rem;
 	}
-	#resume .timeline-wrap::before {
+	#about .timeline-wrap::before {
 		left: 1.8rem;
 	}
-	#resume .timeline-ico {
+	#about .timeline-ico {
 		height: 3.6rem;
 		width: 3.6rem;
 		line-height: 3.6rem;
@@ -1777,7 +1777,7 @@ header .logo a {
 		margin-left: -1.8rem;
 		font-size: 1.5rem;
 	}
-	#resume .timeline-header, #resume .timeline-content {
+	#about .timeline-header, #about .timeline-content {
 		padding-left: 5.5rem;
 	}
 }
