some more mods in dev and about

--- a/css/main.css
+++ b/css/main.css
@@ -2491,6 +2491,7 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 footer {
+	padding-top: 3rem;
 	padding-bottom: 3rem;
 	font-size: 1.4rem;
 	font-family: "poppins-regular", sans-serif;
@@ -2633,33 +2634,8 @@ footer .copyright span:last-child::after {
 #developer {
 	background-color: transparent;
 	background: #EBEBEB;
-}
-
-#developer .section-intro {
-	max-width: 700px;
-	margin-left: auto;
-	margin-right: auto;
-	text-align: center;
-	margin-bottom: 3.6rem;
-	position: relative;
-}
-#developer .section-intro h1 {
-	font-family: "poppins-semibold", serif;
-	font-size: 3.6rem;
-	color: #313131;
-	line-height: 1.25;
-	margin-bottom: 1.2rem;
-}
-#developer .section-intro h5 {
-	color: #4169E1;
-	font-size: 1.6rem;
-	line-height: 1.875;
-	margin-bottom: 0.3rem;
-	letter-spacing: .4rem;
-}
-
-#developer h2 {
-	margin-left: auto;
+	padding-top: 12rem;
+	padding-bottom: 15rem;
 }
 
 #developer .language {
