medium post modified

--- a/css/main.css
+++ b/css/main.css
@@ -2675,3 +2675,9 @@ footer .copyright span:last-child::after {
 	cursor: not-allowed;
 	pointer-events: none;
 }
+
+.blogpost {
+	background-color: white;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	/*min-width: 200px;*/
+}
