--- a/css/main.css
+++ b/css/main.css
@@ -38,6 +38,7 @@
 @import url("fonts.css");
 @import url("font-awesome/css/font-awesome.min.css");
 @import url("micons/micons.css");
+@import url("cubing-icons.css");
 
 
 /** 
@@ -2191,27 +2192,26 @@ header .logo a {
 #stats .row {
 	max-width: 1440px;
 }
-#stats .stat {
+#cuber .stat {
 	border-left: 1px solid rgba(255, 255, 255, 0.12);
 	min-height: 17.4rem;
 }
-#stats .stat:first-child {
+#cuber .stat:first-child {
 	border: none;
 }
-#stats .icon-part i {
-	font-size: 4.8rem;
-	color: #000000;
+#cuber .icon-part i {
+	font-size: 5rem;
+	color: white;
 }
-#stats .stat-count {
-	color: #FFFFFF;
+#cuber .stat-count {
+	color: white;
 	font-size: 3.6rem;
 	margin-top: 1.2rem;
 	margin-bottom: 0;
 	font-family: "poppins-medium", sans-serif;
-	color: white;
 }
-#stats .stat-title {
-	color: rgba(255, 255, 255, 0.5);
+#cuber .stat-title {
+	color: white;
 }
 
 /**
@@ -2220,24 +2220,24 @@ header .logo a {
  * -------------------------------------------------------------------
  */
 @media only screen and (max-width:1024px) {
-	#stats .stat:nth-child(n) {
-		border-left: 1px solid rgba(255, 255, 255, 0.12);
+	#cuber .stat:nth-child(n) {
+		border-left: 1px solid #000000;
 		padding-bottom: 1.5rem;
 	}
-	#stats .stat:nth-child(3n+1) {
+	#cuber .stat:nth-child(3n+1) {
 		border: none;
 	}
 }
 @media only screen and (max-width:768px) {
-	#stats .stat:nth-child(n) {
-		border-left: 1px solid rgba(255, 255, 255, 0.12);
+	#cuber .stat:nth-child(n) {
+		border-left: 1px solid #000000;
 	}
-	#stats .stat:nth-child(2n+1) {
+	#cuber .stat:nth-child(2n+1) {
 		border: none;
 	}
 }
 @media only screen and (max-width:600px) {
-	#stats .stat:nth-child(n) {
+	#cuber .stat:nth-child(n) {
 		border: none;
 	}
 }
@@ -2713,4 +2713,30 @@ footer .copyright span:last-child::after {
 	background: #FFFFFF;
 	padding-top: 12rem;
 	padding-bottom: 15rem;
+	text-align: center;
+}
+
+#cuber .stat-title h5 {
+	font-size: 1.4rem;
+	line-height: 1.714;
+}
+
+.cubing-videos {
+	padding: 10px;
+}
+
+.video-container {
+position: relative;
+padding-bottom: 56.25%;
+padding-top: 30px; height: 0; overflow: hidden;
+}
+
+.video-container iframe,
+.video-container object,
+.video-container embed {
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
 }
