gamer page added

--- a/css/main.css
+++ b/css/main.css
@@ -2746,3 +2746,10 @@ height: 100%;
 	padding-bottom: 15rem;
 	text-align: center;
 }
+
+#gamer {
+	background: #FFFFFF;
+	padding-top: 12rem;
+	padding-bottom: 15rem;
+	text-align: center;
+}
