cleaned a lot. deleted the hided section

--- a/css/main.css
+++ b/css/main.css
@@ -2598,6 +2598,7 @@ footer .copyright span:last-child::after {
   opacity: 0.9;
   overflow: hidden;
   width: 100%;
+  text-align: center;
 }
 
 /* Style the links inside the navigation bar */
@@ -2614,13 +2615,13 @@ footer .copyright span:last-child::after {
 
 /* Change the color of links on hover */
 .topnav a:hover {
-  color: white;
+  color: #4169E1;
   font-weight: normal;
 }
 
 /* Add a color to the active/current link */
 .topnav a.active {
-  color: white;
+  color: #4169E1;
   font-weight: bold;
 }
 
@@ -2752,4 +2753,62 @@ height: 100%;
 	padding-top: 12rem;
 	padding-bottom: 15rem;
 	text-align: center;
+}
+
+.wrapper {
+	max-width: 680px;
+	margin: 60px auto;
+	padding: 0 20px;
+}
+
+.youtube {
+	background-color: #000;
+	margin-bottom: 30px;
+	position: relative;
+	padding-top: 56.25%;
+	overflow: hidden;
+	cursor: pointer;
+}
+.youtube img {
+	width: 100%;
+	top: -16.82%;
+	left: 0;
+	opacity: 0.7;
+}
+.youtube .play-button {
+	width: 90px;
+	height: 60px;
+	background-color: #333;
+	box-shadow: 0 0 30px rgba( 0,0,0,0.6 );
+	z-index: 1;
+	opacity: 0.8;
+	border-radius: 6px;
+}
+.youtube .play-button:before {
+	content: "";
+	border-style: solid;
+	border-width: 15px 0 15px 26.0px;
+	border-color: transparent transparent transparent #fff;
+}
+.youtube img,
+.youtube .play-button {
+	cursor: pointer;
+}
+.youtube img,
+.youtube iframe,
+.youtube .play-button,
+.youtube .play-button:before {
+	position: absolute;
+}
+.youtube .play-button,
+.youtube .play-button:before {
+	top: 50%;
+	left: 50%;
+	transform: translate3d( -50%, -50%, 0 );
+}
+.youtube iframe {
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
 }
