--- a/css/main.css
+++ b/css/main.css
@@ -2670,10 +2670,36 @@ footer .copyright span:last-child::after {
 	pointer-events: none;
 }
 
+.project {
+	margin: 20px;
+	background-color: white;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	border-bottom: 100px;
+	/*min-width: 200px;*/
+}
+
+.project-image {
+	width: 100%;
+	height: 90%;
+	padding: 5%;
+	border-radius: 20px;
+}
+
+.project-title {
+	text-align: center;
+	padding-top: 10px;
+}
+
+.project-content {
+	text-align: justify;
+	padding: 10px;
+}
+
 .blogpost {
 	background-color: white;
 	height: 300px;
 	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	border-bottom: 100px;
 	/*min-width: 200px;*/
 }
 
