--- a/css/main.css
+++ b/css/main.css
@@ -2874,3 +2874,11 @@ height: 100%;
 	top: 0;
 	left: 0;
 }
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: #fff !important;
+}
