--- a/css/main.css
+++ b/css/main.css
@@ -2594,7 +2594,6 @@ footer .copyright span:last-child::after {
 
 /* Add a black background color to the top navigation */
 .topnav {
-  background-color: #000000;
   opacity: 0.9;
   overflow: hidden;
   width: 100%;
@@ -2604,13 +2603,19 @@ footer .copyright span:last-child::after {
 /* Style the links inside the navigation bar */
 .topnav a {
   float: left;
-  color: #808080;
+  color: #ffffff;
   text-align: center;
-  padding: 8px 16px;
+  padding: 8px 13px;
+  letter-spacing: 2.5px;
+  line-height: 32px;
   text-decoration: none;
-  font-size: 17px;
-  font-family: "poppins-medium", sans-serif;
+  font-size: 12px;
+  font-family: "poppins-bold", sans-serif;
   font-weight: normal;
+}
+
+.opaque {
+	background-color: #333;
 }
 
 /* Change the color of links on hover */
