few changes again

--- a/developer-blogs-source/src/app/app.component.html
+++ b/developer-blogs-source/src/app/app.component.html
@@ -2,7 +2,7 @@
     <mat-toolbar-row>
         <span>Developer Blogs</span>
         <span class="toolbar-spacer"></span>
-        <a href="https://danieljames.github.io" style="color: inherit;"><mat-icon class="home-icon" aria-hidden="false" aria-label="Home icon">home</mat-icon></a>
+        <a href="https://danieljames-dj.github.io" style="color: inherit;"><mat-icon class="home-icon" aria-hidden="false" aria-label="Home icon">home</mat-icon></a>
     </mat-toolbar-row>
 </mat-toolbar>
 
