--- a/css/main.css
+++ b/css/main.css
@@ -416,6 +416,10 @@ img.pull-left {
 	.bgrid {
 		padding: 0 15px;
 	}
+
+	body {
+		font-size: 1.5rem;
+	}
 }
 @media only screen and (max-width:600px) {
 	.bgrid {
@@ -2997,7 +3001,8 @@ ul#nav li.current a {color:#4169E1;}
 
 .image-dev {
     display: block;
-    opacity: 0.3;
+	opacity: 0.3;
+	margin-bottom: 5%;
 }
 
 .image-title {
