--- a/css/main.css
+++ b/css/main.css
@@ -1323,11 +1323,16 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 #intro {
-	background: #151515 url(../images/intro-bg.jpg) no-repeat center bottom;
+	/* background:   center bottom; */
+	background-color: #151515;
+	background-image: url(../images/intro-bg.jpg);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-origin: bottom;
 	-webkit-background-size: cover;
+	-o-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
-	background-attachment: fixed;
 	width: 100%;
 	height: 100%;
 	min-height: 720px;
