--- a/css/main.css
+++ b/css/main.css
@@ -1526,12 +1526,12 @@ header .logo a {
  *
  * ------------------------------------------------------------------- 
  */
-#about {
+#coder {
 	background: #FFFFFF;
 	padding-top: 12rem;
 	padding-bottom: 6rem;
 }
-#about .section-intro {
+#coder .section-intro {
 	margin-bottom: 3rem;
 }
 
@@ -1662,15 +1662,15 @@ header .logo a {
 	padding-bottom: 12rem;
 }
 
-#about .resume-timeline {
+#coder .resume-timeline {
 	max-width: 980px;
 }
-#about .timeline-wrap {
+#coder .timeline-wrap {
 	position: relative;
 	margin-top: 1.5rem;
 	margin-bottom: 6rem;
 }
-#about .timeline-wrap::before {
+#coder .timeline-wrap::before {
 	content: "";
 	display: block;
 	width: 1px;
@@ -1680,11 +1680,11 @@ header .logo a {
 	left: 35%;
 	top: 0;
 }
-#about .timeline-block {
+#coder .timeline-block {
 	position: relative;
 	padding-top: 1.5rem;
 }
-#about .timeline-ico {
+#coder .timeline-ico {
 	height: 4.8rem;
 	width: 4.8rem;
 	line-height: 4.8rem;
@@ -1697,35 +1697,35 @@ header .logo a {
 	top: .9rem;
 	margin-left: -2.4rem;
 }
-#about .timeline-ico i {
+#coder .timeline-ico i {
 	position: relative;
 	left: .05rem;
 	top: .2rem;
 }
 
-#about .timeline-header {
+#coder .timeline-header {
 	float: left;
 	width: 35%;
 	padding-right: 90px;
 	text-align: right;
 }
-#about .timeline-header h3 {
+#coder .timeline-header h3 {
 	margin-bottom: 0;
 }
-#about .timeline-header p {
+#coder .timeline-header p {
 	font-family: "poppins-regular", sans-serif;
 	font-size: 1.6rem;
 	color: #888888;
 }
-#about .timeline-content {
+#coder .timeline-content {
 	margin-left: 35%;
 	padding-left: 60px;
 }
-#about .timeline-content h4 {
+#coder .timeline-content h4 {
 	position: relative;
 	padding-bottom: 1.8rem;
 }
-#about .timeline-content h4::after {
+#coder .timeline-content h4::after {
 	content: "";
 	display: block;
 	height: 3px;
@@ -1742,64 +1742,64 @@ header .logo a {
  * ------------------------------------------------------------------- 
  */
 @media only screen and (max-width:1024px) {
-	#about .timeline-header {
+	#coder .timeline-header {
 		padding-right: 50px;
 	}
-	#about .timeline-header h3 {
+	#coder .timeline-header h3 {
 		font-size: 1.8rem;
 	}
-	#about .timeline-header p {
+	#coder .timeline-header p {
 		font-size: 1.4rem;
 	}
-	#about .timeline-content {
+	#coder .timeline-content {
 		padding-left: 50px;
 	}
 }
 @media only screen and (max-width:768px) {
-	#about .timeline-wrap::before {
+	#coder .timeline-wrap::before {
 		left: 2.4rem;
 	}
-	#about .timeline-ico {
+	#coder .timeline-ico {
 		left: 2.4rem;
 	}
-	#about .timeline-header {
+	#coder .timeline-header {
 		float: none;
 		width: auto;
 		padding-right: 15px;
 		text-align: left;
 	}
-	#about .timeline-header h3 {
+	#coder .timeline-header h3 {
 		font-size: 2rem;
 	}
-	#about .timeline-header p {
+	#coder .timeline-header p {
 		font-size: 1.5rem;
 		margin-bottom: 1.5rem;
 	}
-	#about .timeline-content {
+	#coder .timeline-content {
 		margin: 0;
 	}
-	#about .timeline-content h4 {
+	#coder .timeline-content h4 {
 		padding-bottom: 0;
 		padding-top: 2.1rem;
 		margin-bottom: .6rem;
 		font-size: 1.7rem;
 	}
-	#about .timeline-content h4::after {
+	#coder .timeline-content h4::after {
 		bottom: auto;
 		top: 0;
 	}
-	#about .timeline-header, #about .timeline-content {
+	#coder .timeline-header, #coder .timeline-content {
 		padding-left: 7rem;
 	}
 }
 @media only screen and (max-width:480px) {
-	#about .sub-header h2 {
+	#coder .sub-header h2 {
 		font-size: 2.2rem;
 	}
-	#about .timeline-wrap::before {
+	#coder .timeline-wrap::before {
 		left: 1.8rem;
 	}
-	#about .timeline-ico {
+	#coder .timeline-ico {
 		height: 3.6rem;
 		width: 3.6rem;
 		line-height: 3.6rem;
@@ -1807,7 +1807,7 @@ header .logo a {
 		margin-left: -1.8rem;
 		font-size: 1.5rem;
 	}
-	#about .timeline-header, #about .timeline-content {
+	#coder .timeline-header, #coder .timeline-content {
 		padding-left: 5.5rem;
 	}
 }
@@ -2737,7 +2737,8 @@ footer .copyright span:last-child::after {
 }
 
 #cuber {
-	background: #FFFFFF;
+	background-color: transparent;
+	background: #EBEBEB;
 	padding-top: 12rem;
 	padding-bottom: 12rem;
 	text-align: center;
@@ -2774,8 +2775,7 @@ height: 100%;
 }
 
 #traveller {
-	background-color: transparent;
-	background: #EBEBEB;
+	background: #FFFFFF;
 	padding-top: 12rem;
 	padding-bottom: 12rem;
 	text-align: center;
