--- a/css/main.css
+++ b/css/main.css
@@ -1333,6 +1333,7 @@ header .logo a {
 	-o-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
+	background-attachment: fixed;
 	width: 100%;
 	height: 100%;
 	min-height: 720px;
@@ -1470,6 +1471,10 @@ header .logo a {
 	}
 	.intro-social li {
 		margin: 0 15px;
+	}
+	#intro {
+		/* background:   center bottom; */
+		background-attachment: initial;
 	}
 }
 @media only screen and (max-width:768px) {
